// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create database 1`] = `
Object {
  "id": "[ID]",
  "name": "my-meta-db",
  "owner_id": "[ID]",
  "private_schema_name": null,
  "schema_hash": null,
  "schema_name": null,
}
`;

exports[`register apis 1`] = `
Object {
  "anon_role": "anonymous",
  "database_id": "[ID]",
  "dbname": "my-database",
  "domain_id": "[ID]",
  "id": "[ID]",
  "role_name": "authenticated",
  "schemas": Array [
    "a",
  ],
}
`;

exports[`register apis 2`] = `
Object {
  "anon_role": "administrator",
  "database_id": "[ID]",
  "dbname": "my-database",
  "domain_id": "[ID]",
  "id": "[ID]",
  "role_name": "administrator",
  "schemas": Array [
    "b",
    "soon link this with a fkey",
  ],
}
`;

exports[`register domain 1`] = `
Object {
  "database_id": "[ID]",
  "domain": "lql.io",
  "id": "[ID]",
  "subdomain": "api",
}
`;

exports[`register domain 2`] = `
Object {
  "database_id": "[ID]",
  "domain": "lql.io",
  "id": "[ID]",
  "subdomain": "app",
}
`;

exports[`register domain 3`] = `
Object {
  "database_id": "[ID]",
  "domain": "lql.io",
  "id": "[ID]",
  "subdomain": "admin",
}
`;

exports[`register modules 1`] = `
Object {
  "data": Object {
    "supportEmail": "support@launchql.com",
  },
  "database_id": "[ID]",
  "id": "[ID]",
  "name": "legal-emails",
  "site_id": "[ID]",
}
`;

exports[`register modules 2`] = `
Object {
  "api_id": "[ID]",
  "data": Object {
    "authenticate": "authenticate",
    "authenticate_schema": "meta_private",
  },
  "database_id": "[ID]",
  "id": "[ID]",
  "name": "rls_module",
}
`;

exports[`register modules 3`] = `
Object {
  "data": Object {
    "auth_schema": "meta_public",
    "forgot_password": "forgot_password",
    "reset_password": "reset_password",
    "send_verification_email": "send_verification_email",
    "set_password": "set_password",
    "sign_in": "login",
    "sign_up": "register",
    "verify_email": "verify_email",
  },
  "database_id": "[ID]",
  "id": "[ID]",
  "name": "user_auth_module",
  "site_id": "[ID]",
}
`;

exports[`register sites 1`] = `
Object {
  "apple_touch_icon": null,
  "database_id": "[ID]",
  "dbname": "my-database",
  "description": "Website Description",
  "domain_id": "[ID]",
  "favicon": null,
  "id": "[ID]",
  "logo": null,
  "og_image": null,
  "title": "Website Title",
}
`;
